@@ -35,6 +35,15 @@
 <div class="document">
 
 
+<p>2018-03-31  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/wpg.c (ExtractPostscript): Enforce that embedded file is
+a Postscript file.  Fixes oss-fuzz 7235
+&quot;graphicsmagick/coder_WPG_fuzzer: Indirect-leak in MagickRealloc&quot;.
+This is indicated to be a regression. (Credit to OSS-Fuzz)</li>
+</ul>
+</blockquote>
 <p>2018-03-30  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
